# idea-nursery

./: Cargo.toml  Dockerfile.base  Dockerfile.ci  Dockerfile.vscode  README.md  makefile  rdocker_design.md  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
idea-nursery-prelude/: Cargo.toml
ipy/: Cargo.toml
ipy/src/: ifconfig.rs  ip.rs  lib.rs
ipy/src/net_interfaces/: ifconfig.rs  ip.rs  mod.rs
ipy/src/public_ip/: dig.rs  mod.rs
ipy_cli/: Cargo.toml
ipy_cli/src/: main.rs
nety/: Cargo.toml  README.md
nety/cli/: Cargo.toml
nety/cli/src/: main.rs
nety/nety/: Cargo.toml
nety/nety/src/net_interfaces/: getifaddrs.rs  ifconfig.rs  ip.rs  mod.rs
nety/nety/src/public_ip/: dig.rs  mod.rs
nety/src/net_interfaces/: ifconfig.rs  ip.rs  mod.rs
nety/src/public_ip/: dig.rs  mod.rs
nety_cli/: Cargo.toml
nety_cli/src/: main.rs
noty/noty/src/email/: smtpgmail.rs
nursery-prelude/: Cargo.toml
rdocker/: Cargo.toml
rdocker/src/: lib.rs  main.rs
rdocker_common/: Cargo.toml
rdocker_common/src/: lib.rs
rdocker_integration_tests/: Cargo.toml
rdocker_integration_tests/src/: lib.rs
rdocker_model/: Cargo.toml  build.rs
rdocker_model/proto/: rdocker.proto
rdocker_model/src/: lib.rs  rdocker.rs
rdockerd/: Cargo.toml
rdockerd/src/: lib.rs  main.rs
simulations/: Cargo.toml
simulations/data_exports/: ability_progression.csv  mastery_progression.csv
simulations/src/: lib.rs
toolbox-rustbase/: Cargo.toml
toolbox-rustbase/src/: lib.rs
watchy/: README.md
watchy/cli/: Cargo.toml
watchy/cli/src/: main.rs
watchy/watchy/: Cargo.toml
watchy/watchy/src/: lib.rs
