[package]
name = "ipy"
version = "0.1.0"
authors = ["nmio <kristo.koert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.32"
anyhow = "1.0.31"
tokio = {version = "0.2.1"}
lazy_static = "1.4.0"
regex = {version = "1.3.9", features = ["pattern"]}
toolbox-rustbase = {path = "../toolbox-rustbase"}


[dev-dependencies]
tokio = {version = "0.2.1", features = ["full"]}  # TODO: cut back features