[package]
name = "nety"
version = "0.1.0"
authors = ["nmio <kristo.koert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tokio = "0.2"
lazy_static = "1.4"
regex = {version = "1.3", features = ["pattern"]}
toolbox-rustbase = {path = "../toolbox-rustbase"}

[dev-dependencies]
tokio = {version = "0.2", features = ["full"]}  # TODO: cut back features