[package]
name = "nety_cli"
version = "0.1.0"
authors = ["kristokoert <kristo.koert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
nety = {path = "../nety"}
lazy_static = "1.4"
thiserror = "1.0"
anyhow = "1.0"
tokio = "0.2"
futures = "0.3"
log = "0.4"
env_logger = "0.7.1"