[package]
name = "rdocker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdocker_model = {path = "../rdocker_model"}

# Standard runtime tools
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
tokio = {version = "1.10", features = ["full"]}

whoami = "1.1"
serde = "1.0"
structopt ="0.3"
tonic = "0.5"