[package]
name = "rdocker_model"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tonic = "0.5"
tonic-health = "0.4"
prost = "0.8"

[build-dependencies]
tonic-build = "0.5"
